--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<header>
 						<h2>Qué es <strong>Alicom Detailing?</strong>.</h2>
 						<p>
-							Descripción del servicio en pocas palabras.
+							Descripción del servicio en pocas palabras...
 						</p>
 					</header>
 				</section>
